overlays/production/teslamate/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teslamate-grafana
  namespace: teslamate
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "TeslaMate Grafana"
    gethomepage.dev/description: "Tesla Analytics Dashboards"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/icon: "teslamate.png"
    gethomepage.dev/weight: "26"
    gethomepage.dev/pod-selector: "app=teslamate-grafana"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - teslamate.elmstreet79.de
      secretName: teslamate-grafana-tls
  rules:
    - host: teslamate.elmstreet79.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teslamate-grafana
                port:
                  number: 3000
